--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,10 @@
             <artifactId>bootstrap</artifactId>
             <version>5.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>webjars-locator-core</artifactId>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.thymeleaf</groupId>-->
 <!--            <artifactId>thymeleaf</artifactId>-->
