--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # *********** ??? ???????? ????????? ?????? ? AppConfig ***************
 
 #spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
 #spring.datasource.url=jdbc:mysql://localhost:3306/students_db
 #spring.datasource.username=root
 #spring.datasource.password=dingo1975
