fragments; reassign error page add new entity - group and its repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #spring.datasource.username=root
 #spring.datasource.password=dingo1975
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.error.whitelabel.enabled=false
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.ErrorMvcAutoConfiguration
+
+
+server.error.path=/error
