--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,11 @@
             <groupId>org.webjars</groupId>
             <artifactId>webjars-locator-core</artifactId>
         </dependency>
-<!--        <dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <!--        <dependency>-->
 <!--            <groupId>org.thymeleaf</groupId>-->
 <!--            <artifactId>thymeleaf</artifactId>-->
 <!--        </dependency>-->
